# cesam-tools

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  LICENSE  NOTICE  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.nl.md  README.pl.md  README.pt.md
.github/workflows/: ci.yml
docker/: Dockerfile.headless
mock_bin_ru_modbustcp/: Cargo.toml  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.nl.md  README.pl.md  README.pt.md
mock_bin_ru_modbustcp/docs/de/: conception.md  maintenance.md  manuel_utilisateur.md  table_modbus.md
mock_bin_ru_modbustcp/docs/en/: conception.md  maintenance.md  manuel_utilisateur.md  table_modbus.md
mock_bin_ru_modbustcp/docs/es/: conception.md  maintenance.md  manuel_utilisateur.md  table_modbus.md
mock_bin_ru_modbustcp/docs/fr/: conception.md  maintenance.md  manuel_utilisateur.md  table_modbus.md
mock_bin_ru_modbustcp/docs/it/: conception.md  maintenance.md  manuel_utilisateur.md  table_modbus.md
mock_bin_ru_modbustcp/docs/nl/: conception.md  maintenance.md  manuel_utilisateur.md  table_modbus.md
mock_bin_ru_modbustcp/docs/pl/: conception.md  maintenance.md  manuel_utilisateur.md  table_modbus.md
mock_bin_ru_modbustcp/docs/pt/: conception.md  maintenance.md  manuel_utilisateur.md  table_modbus.md
mock_bin_ru_modbustcp/src/: branding.rs  config.rs  gui.rs  i18n.rs  main.rs  map.rs  modbus_server.rs  regulator.rs
mock_bin_ru_modbustcp/src/actors/: mod.rs  network.rs  simulation.rs
mock_bin_ru_modbustcp/todo/: todo.md
mock_bin_ru_opcua/: Cargo.toml
mock_bin_ru_opcua/docs/de/: conception.md  maintenance.md  manuel_utilisateur.md  reference_opcua.md
mock_bin_ru_opcua/docs/en/: conception.md  maintenance.md  manuel_utilisateur.md  reference_opcua.md
mock_bin_ru_opcua/docs/es/: conception.md  maintenance.md  manuel_utilisateur.md  reference_opcua.md
mock_bin_ru_opcua/docs/fr/: conception.md  maintenance.md  manuel_utilisateur.md  reference_opcua.md
mock_bin_ru_opcua/docs/it/: conception.md  maintenance.md  manuel_utilisateur.md  reference_opcua.md
mock_bin_ru_opcua/docs/nl/: conception.md  maintenance.md  manuel_utilisateur.md  reference_opcua.md
mock_bin_ru_opcua/docs/pl/: conception.md  maintenance.md  manuel_utilisateur.md  reference_opcua.md
mock_bin_ru_opcua/docs/pt/: conception.md  maintenance.md  manuel_utilisateur.md  reference_opcua.md
mock_bin_ru_opcua/src/: branding.rs  config.rs  gui.rs  i18n.rs  main.rs  opcua_server.rs  regulator.rs  sim.rs
mock_bin_ru_opcua/src/actors/: mod.rs  network.rs  simulation.rs
mock_bin_su_namur/: Cargo.toml  README.md
mock_bin_su_namur/docs/de/: commandes_namur.md  conception.md  maintenance.md  manuel_utilisateur.md
mock_bin_su_namur/docs/en/: commandes_namur.md  conception.md  maintenance.md  manuel_utilisateur.md
mock_bin_su_namur/docs/es/: commandes_namur.md  conception.md  maintenance.md  manuel_utilisateur.md
mock_bin_su_namur/docs/fr/: commandes_namur.md  conception.md  maintenance.md  manuel_utilisateur.md
mock_bin_su_namur/docs/it/: commandes_namur.md  conception.md  maintenance.md  manuel_utilisateur.md
mock_bin_su_namur/docs/nl/: commandes_namur.md  conception.md  maintenance.md  manuel_utilisateur.md
mock_bin_su_namur/docs/pl/: commandes_namur.md  conception.md  maintenance.md  manuel_utilisateur.md
mock_bin_su_namur/docs/pt/: commandes_namur.md  conception.md  maintenance.md  manuel_utilisateur.md
mock_bin_su_namur/src/: branding.rs  config.rs  gui.rs  i18n.rs  main.rs  motor.rs  namur.rs  namur_server.rs  stirrer.rs  trace.rs
mock_bin_su_namur/src/actors/: mod.rs  network.rs  simulation.rs
mock_lib_control/: Cargo.toml
mock_lib_control/src/: lib.rs  onoff.rs  pid.rs  process.rs  pwm.rs
mock_lib_update/: Cargo.toml
mock_lib_update/src/: lib.rs
packaging/: orme.desktop  osne.desktop  ru_opcua.desktop
packaging/windows/: installer.nsi
pic/: cesam-logo-card.gen.py  cesam-logo-dark.gen.py  orme-logo.gen.py  osne-logo.gen.py  ru_opcua-logo.gen.py
scripts/: build-prod.sh  build-windows.ps1  install-desktop.sh  make-installers.sh
