[package]
name = "mock_bin_ru_opcua"
description = "Prototype (Phase 1) : régulateur de procédé simulé exposé en OPC UA (serveur async-opcua, sécurité None). Réutilise mock_lib_control."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
# MSRV propre à ce crate : `async-opcua` ne déclare aucun `rust-version`, et la
# pile tire des dépendances récentes. Plancher **vérifié** : 1.91 (le workspace
# reste à 1.85 pour les autres crates, qui le respectent réellement).
rust-version = "1.91"

# Nom de l'exécutable provisoire (Phase 1, headless). Nom commercial à fixer.
[[bin]]
name = "ru_opcua"
path = "src/main.rs"

[dependencies]
mock_lib_control = { workspace = true }
async-opcua = { workspace = true }
# `signal` pour l'arrêt propre du serveur (Ctrl-C → fermeture informée des clients).
tokio = { workspace = true, features = ["signal"] }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
